using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Benkyou.Data.Models
{
    public class Notification
    {
        public int NotificationID { get; set; }

        public Guid TenantID { get; set; }

        public Guid UserID { get; set; }

        public string Type { get; set; } = "";

        public string Title { get; set; } = "";
        public string Message { get; set; } = "";

        public string ReferenceType { get; set; } = "";
        public int ReferenceID { get; set; }

        public bool IsRead { get; set; }

        public DateTime? ReadAt { get; set; }

        public DateTime CreatedAt { get; set; }
    }
}
